commit index.html file structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,10 +6,28 @@
   <title>HTML Basic Structure</title>
 </head>
 <body>
-
-  <blockquote class="twitter-tweet">
-  <a href="https://twitter.com/CatholicArena/status/1987851958959370616" >A Tweet</a>
-</blockquote>
-<a href="./index.html">Home</a>
+<header>
+    <ul>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./base_index.html">Base</a></li>
+      <li><a href="./tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
+      <blockquote class="twitter-tweet">
+        <a href="https://twitter.com/CatholicArena/status/1987851958959370616" >A Tweet</a>
+      </blockquote>
+      <a href="./index.html">Home</a>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>
+      Made by <YOUR NAME> - <a href="https://www.youtube.com/" target="_blank">here</a>
+    </p>
+  </footer>
 </body>
 </html>
