--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,7 +6,7 @@
   <title>HTML Basic Structure</title>
 </head>
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident debitis eos, recusandae eligendi aperiam dolorem quam, veniam beatae ipsum facere ex! Odio sapiente rerum mollitia qui pariatur explicabo sequi fugiat?</p>
+  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident debitis eos, recusandae eligendi aperiam dolorem quam, veniam beatae ipsum facere ex! Odio sapiente rerum mollitia qui pariatur explicabo sequi fugiat?</p>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident debitis eos, recusandae eligendi aperiam dolorem quam, veniam beatae ipsum facere ex! Odio sapiente rerum mollitia qui pariatur explicabo sequi fugiat?</p>
 
@@ -18,7 +18,35 @@
   <h2>Hello</h2>
   <h3>Hello</h3>
 
-  <a href="https://www.youtube.com/"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="alx logo"></a>
+  <a href="https://www.youtube.com/"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="alx logo"></a> -->
+
+  <header>
+  <nav>
+    <ul>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./base_index.html">Base</a></li>
+      <li><a href="./tweets.html">Tweets</a></li>
+    </ul>
+  </nav>
+  </header>
+
+  <main>
+    <article>
+      <blockquote class="twitter-tweet">
+        <a href="https://twitter.com/CatholicArena/status/1987851958959370616" >A Tweet</a>
+      </blockquote>
+      <a href="./tweets.html">Home</a>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>
+      Made by <YOUR NAME> - <a href="https://www.youtube.com/" target="_blank">here</a>
+    </p>
+  </footer>
 
   
   
