--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,13 +6,17 @@
   <title>HTML Basic Structure</title>
 </head>
 <body>
+
 <header>
+  <nav>
     <ul>
-      <li><a href="./index.html">Home</a></li>
+      <li><a href="./tweets.html">Home</a></li>
       <li><a href="./base_index.html">Base</a></li>
-      <li><a href="./tweets.html">Tweets</a></li>
+      <li><a href="./index.html">Tweets</a></li>
     </ul>
+  </nav>
   </header>
+
   <main>
     <article>
       <blockquote class="twitter-tweet">
@@ -24,10 +28,12 @@
       <p>placeholder to add comment thread later</p>
     </aside>
   </main>
+
   <footer>
     <p>
       Made by <YOUR NAME> - <a href="https://www.youtube.com/" target="_blank">here</a>
     </p>
   </footer>
+
 </body>
 </html>
