--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -31,6 +31,35 @@
   </header>
 
   <main>
+    <table class="hbtn-table">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Country</th>
+        </tr>
+        <tr>
+          <td>John</td>
+          <td>25</td>
+          <td>USA</td>
+        </tr>
+        <tr>
+          <td>Emily</td>
+          <td>28</td>
+          <td>Canada</td>
+        </tr>
+        <tr>
+          <td>Michael</td>
+          <td>32</td>
+          <td>Australia</td>
+        </tr>
+        <tr>
+          <td>Sophia</td>
+          <td>21</td>
+          <td>UK</td>
+        </tr>
+    </tbody>
+</table>
     <article>
       <blockquote class="twitter-tweet">
         <a href="https://twitter.com/CatholicArena/status/1987851958959370616" >A Tweet</a>
